
15. New: pragma annotate( accounts ...).

16. New (shell rewrite) AdaScript `` may have backslash escapes.

17. New: variable declaration names are checked for common mispellings (e.g. "hi" vs. "high") should the similar variable exist and be visible. [types, etc. too]

18. New: long names ought to have underscores. [type tests needed]

19. Fix: trailing underscores not allowed in variable names.

20. Fix: fixed constraint error on certain text_io subprocedures.

21. Fix: shell statements in a case statement now parsed properly.

22. New: pragma declare_constraint and pragma constraint for design constraints.

23. Fix: pragma restriction, suppress, software_model, license now checked for an identifier name (rather than a string, number or some other token).

24. Fix: pragma license and software_model show the names in the error message for unknown value.

25. Fix: updated man page to version 2.4.  Updated version to 2.4.

26. Fix: static expressions, such as used in pragmas, are now being evaluated.

27. New: pragma declare_affinity and pragma affinity for design affinities.

28. New: pragma suppress( no_empty_command_substitutions ).

29. Fix: s := `` no longer gives a trailing whitespace error message.

30. Change: new support for GNU readline library (third-party areadline library removed).

31. Change: new command line completion capabilities (assignment completion, executable command completion, subcommand completion for certain Linux commands).

32. Fix: Updated Git prompt script example for GNU readline.

33. Fix: Files.Is_Directory no longer appends an unnecessary ASCII.NUL to the path.

34. New: shell history saved as ~/.sparforte_history.

35. New: --color or --colour option to enable coloured messages.

36. New: --icons to enable UTF-8 icons in messages.

37. Fix: --gcc-errors no longer use bold on type errors.

38. Fix: --gcc-errors now takes effect for syntax checking, not just execution.

39. Fix: -e commands no longer require a trailing semi-colon.
