@@ -103,6 +103,9 @@ and to_string functions should be used.
 <p>There is also a string type, <b>strings.base64_string</b>, for use with
 Base 64 encoded strings.</p>
 
+<p>There is a <b>strings.null_unbounded_string</b>, a constant empty string
+for compatibility with Ada.</p>
+
 <a name="strings.count"></a><h3>n := strings.count( s, p )</h3>
 <table cellspacing="0" cellpadding="0" width="98%" summary="package call">
 <tr>
